--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -59,11 +59,12 @@
 }
 
 .header__bar{
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
     margin-right: 1.5rem;
     cursor: pointer;
     margin-top: 1rem;
+    background-color: white;
 }
 
 
