--- a/styles/components/banner.css
+++ b/styles/components/banner.css
@@ -30,6 +30,7 @@
     gap: 1.5rem;
     font-size: var(--size-sm);
     font-weight: 100;
+    padding-bottom: 2rem;
 }
 
 .fact{
@@ -183,6 +184,7 @@
         gap: 1.5rem;
         font-size: var(--size-sm);
         font-weight: 100;
+       
     }
     
     .fact{
