--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -5,13 +5,29 @@
     gap: 3rem;
 }
 
+.hero__image{
+    position: relative;
+  top: 0;
+  left: 0;
+    background-image: url("../../images/consulting.webp");
+    background-size: cover;
+    background-position-x: 30%;
+  background-position-y: 20%;
+    width: 100%;
+    height: 70vh;
+    z-index: -1;
+}
+
 .hero__content{
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: left;
     margin-left: 1rem;
-    margin-top: 2rem;
-    gap: 1rem;
+    margin-top: 15rem;
+    gap: .5rem;
+    color: var(--clr-main);
+    background-color: transparent;
 }
 
 .hero__title{
@@ -110,14 +126,26 @@
         gap: 1rem;
        
     }
+    .hero__image{
+        position: relative;
+      top: 0;
+      left: 0;
+        background-image: url("../../images/consulting.webp");
+        background-size: cover;
+        background-position-x: 15%;
+      background-position-y: 20%;
+        width: 100%;
+        height: 70vh;
+        z-index: -1;
+    }
     
     .hero__content{
         display: flex;
         flex-direction: column;
         align-items: left;
         margin-left: 3rem;
-        margin-top: 2rem;
-        gap: 2rem;
+        margin-top: 15rem;
+        gap: 1rem;
        
     }
     
@@ -212,13 +240,26 @@
         gap: 1rem;
        
     }
+
+    .hero__image{
+        position: relative;
+      top: 0;
+      left: 0;
+        background-image: url("../../images/consulting.webp");
+        background-size: cover;
+        background-position-x: 20%;
+      background-position-y: 20%;
+        width: 100%;
+        height: 100vh;
+        z-index: -1;
+    }
     
     .hero__content{
         display: flex;
         flex-direction: column;
         align-items: left;
-        margin-left: 5rem;
-        margin-top: 2rem;
+        margin-left: 7rem;
+        margin-top: 12rem;
         gap: 1rem;
        
     }
