--- a/styles/components/work-process.css
+++ b/styles/components/work-process.css
@@ -65,7 +65,8 @@
 }
 
 .neurology-svg{
-    margin-top: 4rem;
+    margin-top: 1rem;
+    overflow-x: hidden;
    
 }
 
@@ -75,7 +76,7 @@
 
 .cosm__title{
     text-transform: capitalize;
-    margin-left: 3rem;
+    margin-left: 6rem;
     margin-bottom: 1rem;
     font-size: var(--size-lg);
 }
@@ -83,19 +84,19 @@
 .cosm__desc-1{
     font-size: var(--size-sm);
     font-weight: 400;
-    margin-left: 1.5rem;
+    margin-left: 3rem;
 }
 
 .cosm__desc-2{
     font-size: var(--size-sm);
     font-weight: 400;
-    margin-left: 2.5rem;
+    margin-left: 4rem;
 }
 
 .cosm__desc-3{
     font-size: var(--size-sm);
     font-weight: 400;
-    margin-left: 3.5rem;
+    margin-left: 4.8rem;
     margin-bottom: 1rem;
 }
 
@@ -109,14 +110,37 @@
     padding: 0.5em 1em;
     border-radius: 18px;
     border: 1px solid rgb(59, 59, 59);
-    margin-left: 5rem;
+    margin-left: 6.5rem;
     
     }
 
     .surgery-svg{
-        margin-top: 4rem;
+        margin-top: 1rem;
+        overflow-x: hidden;
     }
 
     .dental-svg{
-        margin-top: 4rem;
+        margin-top: 1rem;
+        overflow-x: hidden;
+    }
+
+    .dental__title{
+        text-transform: capitalize;
+        margin-left: 4.5rem;
+        margin-bottom: 1rem;
+        margin-top: .5rem;
+        font-size: var(--size-lg);
+    }
+
+    .neurology-svg{
+        margin-top: 1rem;
+        overflow-x: hidden;
+    }
+
+    .neurology__title{
+        text-transform: capitalize;
+        margin-left: 4rem;
+        margin-bottom: 1rem;
+        margin-top: .5rem;
+        font-size: var(--size-lg);
     }
