--- a/styles/components/work-process.css
+++ b/styles/components/work-process.css
@@ -66,7 +66,7 @@
 
 .neurology-svg{
     margin-top: 1rem;
-    overflow-x: hidden;
+   
    
 }
 
@@ -116,25 +116,25 @@
 
     .surgery-svg{
         margin-top: 1rem;
-        overflow-x: hidden;
+       
     }
 
     .dental-svg{
         margin-top: 1rem;
-        overflow-x: hidden;
+     
     }
 
     .dental__title{
         text-transform: capitalize;
         margin-left: 4.5rem;
-        margin-bottom: 1rem;
-        margin-top: .5rem;
+        margin-bottom: rem;
+        margin-top: 2rem;
         font-size: var(--size-lg);
     }
 
     .neurology-svg{
         margin-top: 1rem;
-        overflow-x: hidden;
+       
     }
 
     .neurology__title{
