--- a/styles/components/work-process.css
+++ b/styles/components/work-process.css
@@ -136,6 +136,7 @@
 
     .neurology-svg{
         margin-top: 4rem;
+        
        
     }
 
@@ -146,3 +147,375 @@
         margin-top: .5rem;
         font-size: var(--size-lg);
     }
+
+
+    /* med query*/
+
+    /* xs*/
+ @media (min-width:475px){
+   
+}
+
+
+@media (min-width:640px){
+    
+}
+
+/*md*/
+@media (min-width:768px){
+
+    .work__process-container{
+        background-color: white;
+        padding: 3rem 2rem;
+    }
+    
+    .work__process-content{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+       
+    
+    }
+    .work__process-title{
+        font-size: var(--size-sm);
+        font-weight: 300;
+        margin-left: 2rem;
+    }
+    
+    .work__process-subtitle{
+        font-size: var(--size-3xl);
+        font-weight: 600;
+        text-transform: capitalize;
+        margin-left: 1.5rem;
+    }
+    
+    .work__process-subtitle-1{
+        font-size: var(--size-3xl);
+        font-weight: 600;
+        margin-left: 3rem;
+        text-transform: capitalize;
+        margin-left: 3.5rem;
+    }
+    
+    .h-lines{
+        position: relative;
+        display: flex;
+        margin-left: .5rem;
+       
+       
+    }
+    
+    .lines-1{
+        position: absolute;
+        width: 10px; 
+        height: 1px;
+        border-bottom: 2px solid var(--clr-rose);
+        margin-top: 0.5rem;
+       
+    }
+    .lines-3{
+        position: absolute;
+        width: 10px; 
+        height: 1px;
+        border-bottom: 2px solid var(--clr-rose);
+        margin-top: 0.5rem;
+        margin-left: 4.5rem;
+       
+    }
+    
+    .lines-2{
+        position: absolute;
+        width: 30px; 
+        /* height: 1px; */
+        border-bottom: 2px solid var(--clr-rose);
+        margin-top: 0.5rem;
+        margin-left: 1.5rem;
+        
+    }
+
+    .work__process-svgs{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .neurology-svg{
+        margin-top: 4rem;
+        width: 24rem;
+        height: 24rem;
+       
+       
+    }
+    
+    .neurology__work-process-content{
+        display: flex;
+        flex-direction: column;
+       margin-right: 4rem;
+    }
+    
+    .cosm__title{
+        text-transform: capitalize;
+        margin-left: 4rem;
+        margin-bottom: 1rem;
+        font-size: var(--size-lg);
+    }
+    
+    .cosm__desc-1{
+        font-size: var(--size-sm);
+        font-weight: 400;
+        margin-left: 2rem;
+    }
+    
+    .cosm__desc-2{
+        font-size: var(--size-sm);
+        font-weight: 400;
+        margin-left: 3rem;
+    }
+    
+    .cosm__desc-3{
+        font-size: var(--size-sm);
+        font-weight: 400;
+        margin-left: 3.8rem;
+        margin-bottom: 1rem;
+    }
+    
+    .cosm__btn{
+        display: inline-block;
+        font-weight: 600;
+        text-decoration: none;
+        letter-spacing: -0.05em;
+        background-color: white;
+        color: black;
+        padding: 0.5em 1em;
+        border-radius: 18px;
+        border: 1px solid rgb(59, 59, 59);
+        margin-right: 4rem;
+        
+        }
+    
+        .surgery-svg{
+            margin-top: 4rem;
+            width: 24rem;
+            height: 24rem;
+           
+        }
+    
+        .dental-svg{
+            margin-top: 4rem;
+            width: 24rem;
+            height: 24rem;
+         
+        }
+
+        .dental__work-process-content{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    
+        .dental__title-work{
+            text-transform: capitalize;
+            margin-left: 3.5rem;
+            margin-bottom: rem;
+            margin-top: 2rem;
+            font-size: var(--size-lg);
+        }
+    
+        .neurology-svg{
+            margin-top: 4rem;
+            width: 24rem;
+            height: 24rem;
+            
+           
+        }
+    
+        .neurology__title-work{
+            text-transform: capitalize;
+            margin-left: 4rem;
+            margin-bottom: 1rem;
+            margin-top: .5rem;
+            font-size: var(--size-lg);
+        }
+    
+}
+
+/*lg*/
+@media (min-width:1024px){
+   
+}
+
+/*xl*/
+ @media (min-width:1280px){
+
+    .work__process-container{
+        background-color: white;
+        padding: 3rem 2rem;
+    }
+
+    .work__process-svgs{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .work__process-content{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+       
+    
+    }
+    .work__process-title{
+        font-size: var(--size-sm);
+        font-weight: 300;
+        margin-left: 2rem;
+    }
+    
+    .work__process-subtitle{
+        font-size: var(--size-3xl);
+        font-weight: 600;
+        text-transform: capitalize;
+        margin-left: 1.5rem;
+    }
+    
+    .work__process-subtitle-1{
+        font-size: var(--size-3xl);
+        font-weight: 600;
+        margin-left: 3rem;
+        text-transform: capitalize;
+        margin-left: 3.5rem;
+    }
+    
+    .h-lines{
+        position: relative;
+        display: flex;
+        margin-left: .5rem;
+       
+       
+    }
+    
+    .lines-1{
+        position: absolute;
+        width: 10px; 
+        height: 1px;
+        border-bottom: 2px solid var(--clr-rose);
+        margin-top: 0.5rem;
+       
+    }
+    .lines-3{
+        position: absolute;
+        width: 10px; 
+        height: 1px;
+        border-bottom: 2px solid var(--clr-rose);
+        margin-top: 0.5rem;
+        margin-left: 4.5rem;
+       
+    }
+    
+    .lines-2{
+        position: absolute;
+        width: 30px; 
+        /* height: 1px; */
+        border-bottom: 2px solid var(--clr-rose);
+        margin-top: 0.5rem;
+        margin-left: 1.5rem;
+        
+    }
+    
+    .neurology-svg{
+        margin-top: 4rem;
+        width: 24rem;
+        height: 24rem;
+       
+       
+    }
+    
+    .neurology__work-process-content{
+        display: flex;
+        flex-direction: column;
+        margin-right: 12rem;
+    }
+    
+    .cosm__title{
+        text-transform: capitalize;
+        margin-left: 4rem;
+        margin-bottom: 1rem;
+        font-size: var(--size-lg);
+    }
+    
+    .cosm__desc-1{
+        font-size: var(--size-sm);
+        font-weight: 400;
+        margin-left: 3rem;
+    }
+    
+    .cosm__desc-2{
+        font-size: var(--size-sm);
+        font-weight: 400;
+        margin-left: 4rem;
+    }
+    
+    .cosm__desc-3{
+        font-size: var(--size-sm);
+        font-weight: 400;
+        margin-left: 4.8rem;
+        margin-bottom: 1rem;
+    }
+    
+    .cosm__btn{
+        display: inline-block;
+        font-weight: 600;
+        text-decoration: none;
+        letter-spacing: -0.05em;
+        background-color: white;
+        color: black;
+        padding: 0.5em 1em;
+        border-radius: 18px;
+        border: 1px solid rgb(59, 59, 59);
+        margin-left: 6rem;
+        
+        }
+    
+        .surgery-svg{
+            margin-top: 4rem;
+            width: 24rem;
+            height: 24rem;
+           
+        }
+    
+        .dental-svg{
+            margin-top: 4rem;
+             width: 24rem;
+             height: 24rem;
+         
+        }
+
+        .dental__work-process-content{
+            display: flex;
+            flex-direction: column;
+            margin-right: 8rem;
+        }
+    
+        .dental__title-work{
+            text-transform: capitalize;
+            margin-left: .5rem;
+            margin-bottom: rem;
+            margin-top: 2rem;
+            font-size: var(--size-lg);
+        }
+    
+        .neurology-svg{
+            margin-top: 4rem;
+            
+           
+        }
+    
+        .neurology__title-work{
+            text-transform: capitalize;
+            margin-left: 4rem;
+            margin-bottom: 1rem;
+            margin-top: .5rem;
+            font-size: var(--size-lg);
+        }
+   
+} 
