--- a/styles/components/news.css
+++ b/styles/components/news.css
@@ -422,7 +422,7 @@ hr{
        
         z-index: 99;
         width: 18rem;
-        height: 21rem;
+        height: 25rem;
         text-align: left;
         margin-top: 3rem;
         /* padding-left: 1rem; */
@@ -477,15 +477,23 @@ hr{
     .date__comments{
         display: flex;
         justify-content: center;
-        gap: 1.5rem;
+        gap: 1rem;
         padding-bottom: 1rem;
         margin-top: -1.5rem;
+        
     }
-    .date,
-    .comments{
+    .date{
         font-size: var(--size-sm);
         font-weight: 200;
     }
+    .comments{
+        font-size: var(--size-sm);
+        font-weight: 200;
+      
+    }
+   .calender{
+    padding-left: 2rem;
+   }
     
     hr{
         width: 14rem;
