--- a/styles/components/news.css
+++ b/styles/components/news.css
@@ -66,6 +66,7 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    padding-bottom: 4rem;
 }
 
 
@@ -79,6 +80,7 @@
     /* padding-left: 1rem; */
     background-color: white;
     padding-bottom: 3rem;
+
 }
 
 .news__card-1{
